logs/Slang/generated/keywords/5.6.2--keyword_sequence.sv.log
name: keyword_sequence
description: The 'sequence' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sequence.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sequence.sv:8:8: error: expected declarator
    bit sequence;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sequence.sv:8:9: error: language feature not yet supported
    bit sequence;
        ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sequence.sv:8:17: error: expected identifier
    bit sequence;
                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sequence.sv:8:18: error: expected ';'
    bit sequence;
                 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sequence.sv:9:1: error: expected expression
endmodule
^
